# devmate

./: .gitignore  README.md  config.toml.example  pyproject.toml
app/: main.py
devmate/: config.py  llm.py  logging_config.py  main.py  observability.py  test.py
devmate/embeddings/: __init__.py  http_embeddings.py
devmate/mcp/: __init__.py  client.py  search_client.py  search_server.py  server.py
devmate/rag/: __init__.py  loader.py  retriever.py  text_loader.py  vector_store.py
devmate/scripts/: langsmith_test.py  run_mcp_server.py  test.py  test_embeddings.py  test_kb_search.py  test_mcp_client.py  test_mcp_search.py  test_rag.py
devmate/tools/: knowledge_base.py  web_search.py
docs/: internal_fastapi_guidelines.md  project_guidelines.md
