[project]
name = "devmate"
version = "0.1.0"
description = "DevMate intelligent coding agent for developer workflows"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "langchain>=1.2.10",
    "langchain-openai>=0.3.0",
]

[project.scripts]
devmate = "devmate.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["devmate"]
